# pred-extroverts

./: .gitignore  Makefile  README.md  constants.py  pyproject.toml
Databases/: Outliers.parquet  data_no_Outliers.parquet  submission.csv
config/: config.yaml
notebooks/: Autoenconder_to_detect_outliers.py  Introvertidos x Extrovertidos_Logistic_model.py  Outliers_Analysis.py  data_no_Outliers.parquet  features.ipynb
output/: misclassified_ids.txt  oof_preds.csv  test_preds.csv
pred_introverts_extroverts/: evaluator.py  features.py  functions.py  logger.py  process.py  train.py
