[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pred_introverts_extroverts"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Giovani" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = ">=3.10, <3.14"


[tool.ruff]
line-length = 99
src = ["pred_introverts_extroverts"]
include = ["pyproject.toml", "pred_introverts_extroverts/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["pred_introverts_extroverts"]
force-sort-within-sections = true

